<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_theme"
        android:title="@string/theme"
        android:icon="@drawable/ic_dark_mode"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <!-- L'icône pour le menu à trois points -->
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/menu"
        android:orderInCategory="100"
        app:showAsAction="always">

        <!-- Les sous-items du menu qui apparaîtront lorsque l'utilisateur clique sur l'icône des trois points -->
        <menu>
            <item
                android:id="@+id/action_history_user"
                android:title="@string/myHistory"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_history_all"
                android:title="@string/allHistory"
                app:showAsAction="ifRoom" />


        </menu>
    </item>
</menu>
