<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeFragment">

    <!-- Image en arrière-plan -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        android:scaleType="centerCrop"
        android:alpha="0.3"
        android:src="@drawable/welcome"/>


    <!-- Contenu de ton fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="440dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_name"
            android:textSize="25sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="44dp"
            />
        <EditText
            android:id="@+id/playerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/please_type_your_name"
            android:textSize="16sp"
            android:padding="20dp"
            android:elevation="4dp"
            />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginHorizontal="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/gray"
            android:text="@string/let_s_play"
            />
    </LinearLayout>

</FrameLayout>
